<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.activities.PaymentDoneActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_payment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        app:theme="@style/BarTheme"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/paymentdone"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        app:srcCompat="@drawable/ic_done" />

    <TextView
        android:id="@+id/payment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/payment_successful"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/thank_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/back_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/back_to_home"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

</LinearLayout>