<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NewColor"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    tools:context=".activity.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/newlogo" />

            <TextView
                android:id="@+id/textView_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/thanmon"
                android:gravity="center"
                android:text="Admin Register"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="14dp"
                android:background="@android:color/white">

                <EditText
                    android:id="@+id/adminFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/thanmon"
                    android:hint="@string/admin_name"
                    android:inputType="textCapSentences"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="14dp"
                android:background="@android:color/white">

                <EditText
                    android:id="@+id/adminEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/thanmon"
                    android:hint="@string/admin_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="14dp"
                android:background="@android:color/white">

                <EditText
                    android:id="@+id/adminMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/thanmon"
                    android:hint="@string/admin_mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">


                <EditText
                    android:id="@+id/adminPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/admin_password"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnAdminRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="90dp"
                android:background="#46BDCC"
                android:fontFamily="@font/thanmon"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/thanmon"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/already_having_account"
                android:textColor="#ccc" />


            <TextView
                android:id="@+id/text_back_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/thanmon"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/back_to_login"
                android:textColor="#ccc" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>