<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NewColor"
    android:orientation="vertical"
    tools:context=".activity.activities.LoginActivity"
    android:paddingBottom="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/newlogo" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:fontFamily="@font/thanmon"
                android:text="Welcome to CarPay"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/white">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:fontFamily="@font/thanmon"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:fontFamily="@font/thanmon"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="90dp"
                android:fontFamily="@font/thanmon"
                android:layout_marginBottom="10dp"
                android:background="#46BDCC"
                android:text="Login"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/thanmon"
                android:gravity="center"
                android:text="@string/not_having_account"
                android:textColor="#ccc" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/thanmon"
                android:background="#46BDCC"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>